{
  "version": 4,
  "terraform_version": "0.12.25",
  "serial": 135,
  "lineage": "b860d5e4-1e4a-d32e-b3ed-f9c6bc5b56c9",
  "resources": [
    {
      "mode": "data",
      "type": "aws_security_group",
      "name": "sg-allow-rdp",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:411395035331:security-group/sg-01112d0b07f70574f",
            "description": "Allow RDP inbound traffic from VPC",
            "filter": null,
            "id": "sg-01112d0b07f70574f",
            "name": "allow-rdp",
            "tags": {
              "Environment": "dev",
              "Name": "useast1d-allow-rdp",
              "Namespace": "useast1d"
            },
            "vpc_id": "vpc-0fd3c5175b6bae06f"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:411395035331:vpc/vpc-0fd3c5175b6bae06f",
            "cidr_block": "10.0.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0cfece2e2fcd270d0",
                "cidr_block": "10.0.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-8f56eaf5",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0fd3c5175b6bae06f",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0999a51f124943c98",
            "owner_id": "411395035331",
            "state": "available",
            "tags": {
              "Environment": "dev",
              "Name": "useast1d-vpc",
              "Namespace": "useast1d"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "nlb-windows-jump",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:411395035331:loadbalancer/net/useast1d-nlb-windowsjump/20a26a686f2b1c96",
            "arn_suffix": "net/useast1d-nlb-windowsjump/20a26a686f2b1c96",
            "dns_name": "useast1d-nlb-windowsjump-20a26a686f2b1c96.elb.us-east-1.amazonaws.com",
            "enable_cross_zone_load_balancing": false,
            "enable_deletion_protection": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:411395035331:loadbalancer/net/useast1d-nlb-windowsjump/20a26a686f2b1c96",
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "useast1d-nlb-windowsjump",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-07877279277c92446"
              },
              {
                "subnet_id": "subnet-0e22f356ca7f4eb7b"
              },
              {
                "subnet_id": "subnet-0e9a51dc0b0c5c59a"
              }
            ],
            "subnets": [
              "subnet-07877279277c92446",
              "subnet-0e22f356ca7f4eb7b",
              "subnet-0e9a51dc0b0c5c59a"
            ],
            "tags": {
              "Environment": "dev",
              "Name": "useast1d-nlb-windowsjump",
              "Namespace": "useast1d"
            },
            "vpc_id": "vpc-0fd3c5175b6bae06f",
            "zone_id": "Z26RNL4JYFTOTI"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "listener-windowsjump",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:411395035331:listener/net/useast1d-nlb-windowsjump/20a26a686f2b1c96/4a05f67e8c35b1c1",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:411395035331:targetgroup/useast1d-targetgroup-windowsjump/9133e4371758a19f",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:411395035331:listener/net/useast1d-nlb-windowsjump/20a26a686f2b1c96/4a05f67e8c35b1c1",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:411395035331:loadbalancer/net/useast1d-nlb-windowsjump/20a26a686f2b1c96",
            "port": 3389,
            "protocol": "TCP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "aws_lb.nlb-windows-jump",
            "aws_lb_target_group.targetgroup-windowsjump"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "targetgroup-windowsjump",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:411395035331:targetgroup/useast1d-targetgroup-windowsjump/9133e4371758a19f",
            "arn_suffix": "targetgroup/useast1d-targetgroup-windowsjump/9133e4371758a19f",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "port": "traffic-port",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:411395035331:targetgroup/useast1d-targetgroup-windowsjump/9133e4371758a19f",
            "lambda_multi_value_headers_enabled": false,
            "name": "useast1d-targetgroup-windowsjump",
            "port": 3389,
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "tags": {
              "Environment": "dev",
              "Name": "useast1d-targetgroup-windowsjump",
              "Namespace": "useast1d"
            },
            "target_type": "instance",
            "vpc_id": "vpc-0fd3c5175b6bae06f"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow-remote-rdp",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:411395035331:security-group/sg-094e733cf1eb9e723",
            "description": "Allow RDP inbound traffic from Home Office",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-094e733cf1eb9e723",
            "ingress": [
              {
                "cidr_blocks": [
                  "100.11.0.0/16"
                ],
                "description": "Allow RDP inbound traffic from Home Office",
                "from_port": 3389,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3389
              }
            ],
            "name": "allow-remote-rdp",
            "name_prefix": null,
            "owner_id": "411395035331",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "useast1d-allow-remote-rdp",
              "Namespace": "useast1d"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fd3c5175b6bae06f"
          }
        }
      ]
    }
  ]
}